apps/tetris/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tetris
  namespace: tetris
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tetris
  template:
    metadata:
      labels:
        app: tetris
    spec:
      imagePullSecrets:
        - name: gitlab-registry
      containers:
        - name: tetris
          image: registry.gitlab.com/grupo02-paas/paas-infrastructure/tetris:1.0
          ports:
            - containerPort: 8080
